--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-image-marker": "^0.9.2",
+    "react-native-reanimated": "~2.14.4",
     "react-native-svg": "13.4.0"
   },
   "devDependencies": {
