--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@openspacelabs/react-native-zoomable-view": "^2.1.1",
+    "@shopify/react-native-skia": "0.1.172",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.14",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-marker": "^0.9.2",
     "react-native-reanimated": "~2.14.4",
+    "react-native-redash": "^18.1.3",
     "react-native-svg": "13.4.0"
   },
   "devDependencies": {
