--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "dependencies": {
     "@openspacelabs/react-native-zoomable-view": "^2.1.1",
     "@shopify/react-native-skia": "0.1.221",
-    "expo": "~50.0.6",
+    "@types/react": "~18.2.45",
+    "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-image-marker": "^0.9.2",
+    "react-native-reanimated": "~3.6.2",
     "react-native-redash": "^18.1.3",
     "react-native-svg": "14.1.0",
-    "react-native-reanimated": "~3.6.2",
-    "typescript": "^5.3.0",
-    "@types/react": "~18.2.45"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
