--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "expo": "~50.0.13",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.5",
+    "react-native": "^0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-image-marker": "^0.9.2",
     "react-native-reanimated": "~3.6.2",
