chore: added jsx: react to compilerOptions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
-  "compilerOptions": { "strict": true },
+  "compilerOptions": {
+    "jsx": "react", "strict": true 
+},
   "extends": "expo/tsconfig.base"
 }
