--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "jsx": "react", "strict": true 
-},
+    "jsx": "react-jsx",
+    "strict": true
+  },
   "extends": "expo/tsconfig.base"
 }
