--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@openspacelabs/react-native-zoomable-view": "^2.1.1",
-    "@shopify/react-native-skia": "0.1.221",
+    "@shopify/react-native-skia": "^1.2.3",
     "@types/react": "~18.2.45",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
