--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "start-10": "EXPO_PUBLIC_NODES_NUM=10 expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
