--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-image-marker": "^0.9.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-redash": "^18.1.3",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "expo-linear-gradient": "~12.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
