--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "expo start",
     "start-10": "EXPO_PUBLIC_NODES_NUM=10 expo start",
+    "start-img": "EXPO_PUBLIC_DEV_IMG=true expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -21,7 +22,8 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-redash": "^18.1.3",
     "typescript": "^5.3.0",
-    "expo-linear-gradient": "~12.7.2"
+    "expo-linear-gradient": "~12.7.2",
+    "expo-image-picker": "~14.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
