--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "expo start",
     "start-10": "EXPO_PUBLIC_NODES_NUM=10 expo start",
     "start-img": "EXPO_PUBLIC_DEV_IMG=true expo start",
+    "start-img-crop": "EXPO_PUBLIC_DEV_IMG=crop expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
