--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-redash": "^18.1.3",
     "typescript": "^5.3.0",
     "expo-linear-gradient": "~12.7.2",
-    "expo-image-picker": "~14.7.1"
+    "expo-image-picker": "~14.7.1",
+    "expo-file-system": "~16.0.9",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
