--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "betabook",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "start-10": "EXPO_PUBLIC_NODES_NUM=10 expo start",
@@ -28,7 +28,12 @@
     "expo-image-picker": "~14.7.1",
     "expo-file-system": "~16.0.9",
     "@react-native-async-storage/async-storage": "1.21.0",
-    "expo-crypto": "~12.8.1"
+    "expo-crypto": "~12.8.1",
+    "expo-router": "~3.4.10",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "expo-linking": "~6.2.2",
+    "expo-constants": "~15.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
