--- a/package.json
+++ b/package.json
@@ -14,8 +14,19 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@expo-google-fonts/inria-sans": "^0.2.3",
+    "@expo-google-fonts/inria-serif": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@types/react": "~18.2.45",
     "expo": "~50.0.17",
+    "expo-constants": "~15.4.6",
+    "expo-crypto": "~12.8.1",
+    "expo-file-system": "~16.0.9",
+    "expo-font": "~11.10.3",
+    "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.10",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "^0.73.6",
@@ -23,17 +34,9 @@
     "react-native-image-marker": "^0.9.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-redash": "^18.1.3",
-    "typescript": "^5.3.0",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-image-picker": "~14.7.1",
-    "expo-file-system": "~16.0.9",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "expo-crypto": "~12.8.1",
-    "expo-router": "~3.4.10",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "expo-linking": "~6.2.2",
-    "expo-constants": "~15.4.6"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
