--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@expo-google-fonts/inria-sans": "^0.2.3",
     "@expo-google-fonts/inria-serif": "^0.2.3",
+    "@gorhom/bottom-sheet": "^4.6.3",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@types/react": "~18.2.45",
     "expo": "~50.0.17",
