--- a/app.json
+++ b/app.json
@@ -16,13 +16,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.zacmosshk.betabook"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.zacmosshk.betabook"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -30,6 +32,14 @@
     "plugins": [
       "expo-router",
       "expo-font"
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "8d283245-8d09-4055-bad1-24e2b84f6285"
+      }
+    }
   }
 }
