--- a/eas.json
+++ b/eas.json
@@ -4,10 +4,19 @@
   },
   "build": {
     "development": {
-      "developmentClient": true,
-      "distribution": "internal"
+      "android": {
+        "buildType": "apk"
+      }
     },
-    "preview": {
+    "development2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+    "development3": {
+      "developmentClient": true
+    },
+    "development4": {
       "distribution": "internal"
     },
     "production": {}
