--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
     "@expo-google-fonts/inria-sans": "^0.2.3",
     "@expo-google-fonts/inria-serif": "^0.2.3",
     "@gorhom/bottom-sheet": "^4.6.3",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@types/react": "~18.2.45",
-    "expo": "~50.0.19",
-    "expo-constants": "~15.4.6",
-    "expo-crypto": "~12.8.1",
-    "expo-file-system": "~16.0.9",
-    "expo-font": "~11.10.3",
-    "expo-image-picker": "~14.7.1",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.10",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "^0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@types/react": "~18.3.12",
+    "expo": "^52.0.39",
+    "expo-constants": "~17.0.8",
+    "expo-crypto": "~14.0.2",
+    "expo-file-system": "~18.0.11",
+    "expo-font": "~13.0.4",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.19",
+    "expo-status-bar": "~2.0.1",
+    "react": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-redash": "^18.1.3",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "typescript": "^5.3.0"
   },
   "devDependencies": {
